Ticket Booking Option [Work in Progress]
1. Design part [Done]
2. Trip availability checking option in a popup

Co-Authored-By: Muhammad Fahimuzzaman <59233184+Fahimuzzaman-10@users.noreply.github.com>
Co-Authored-By: Md. Hosain Sarder <100443114+cshosain@users.noreply.github.com>

--- a/BusTicketManagementSystem/Dashboard.resx
+++ b/BusTicketManagementSystem/Dashboard.resx
@@ -12052,7 +12052,7 @@
         TkSuQmCC
 </value>
   </data>
-  <data name="guna2Button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnTicketBooking.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAUhJREFUSEvF
         lQGRwjAQRSsBCUjAATgACefkkIAEHICEcwAOOAfgoPyXbGZKNm16E5h7M3/S7m52kzRJu3+l7/svZK+O
